--- a/Assets/Rector/StaticResources/UI/ConsoleLog.uxml
+++ b/Assets/Rector/StaticResources/UI/ConsoleLog.uxml
@@ -1,3 +1,5 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
+    <Style src="project://database/Assets/Rector/StaticResources/UI/StyleSheets/RectorCommon.uss?fileID=7433441132597879392&amp;guid=7e18d0e458dc4fa0884ab502b69d9cc2&amp;type=3#RectorCommon" />
+    <Style src="project://database/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss?fileID=7433441132597879392&amp;guid=6e4bceee306bbe249afe4a80e1779567&amp;type=3" />
     <engine:Label text="[12:32:30] [EDGE/DISCONNECT]: SRC=1:&apos;Vfx&apos;, DST=7:&apos;Switch 4&apos;" class="rector-label rector-console-log-label" />
 </engine:UXML>
