--- a/Assets/Rector/StaticResources/UI/ExposedCallbackInput.uxml
+++ b/Assets/Rector/StaticResources/UI/ExposedCallbackInput.uxml
@@ -1,5 +1,6 @@
 <engine:UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:engine="UnityEngine.UIElements" xmlns:editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/Rector/StaticResources/UI/Rector.uss?fileID=7433441132597879392&amp;guid=6e4bceee306bbe249afe4a80e1779567&amp;type=3#Rector" />
+    <Style src="project://database/Assets/Rector/StaticResources/UI/StyleSheets/RectorCommon.uss?fileID=7433441132597879392&amp;guid=7e18d0e458dc4fa0884ab502b69d9cc2&amp;type=3#RectorCommon" />
+    <Style src="project://database/Assets/Rector/StaticResources/UI/StyleSheets/RectorNodeParameter.uss?fileID=7433441132597879392&amp;guid=55360d68c21f42d392685c3a649647b0&amp;type=3#RectorNodeParameter" />
     <engine:VisualElement name="input" class="rector-exposed-input">
         <engine:VisualElement class="rector-exposed-name-label-container">
             <engine:Label text="Label" name="name-label" class="rector-label rector-exposed-name-label" />
