--- a/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
+++ b/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
@@ -144,6 +144,16 @@
     margin-top: 100px;
 }
 
+.rector-copyright-notices-page {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.rector-copyright-notices-label {
+    position: absolute;
+}
+
 .rector-graph-page {
     position: absolute;
     flex-grow: 1;
