--- a/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
+++ b/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
@@ -49,6 +49,7 @@
 }
 
 .rector-hud-version-label {
+    font-size: 18px;
     -unity-text-align: lower-left;
     margin-left: 12px;
     margin-bottom: -5px;
@@ -198,6 +199,7 @@
 }
 
 .rector-node-detail-name-label-container {
+    font-size: 18px;
     margin-bottom: 20px;
     align-items: center;
 }
