--- a/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
+++ b/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
@@ -176,6 +176,8 @@
     height: 100%;
     position: absolute;
     transform-origin: left top;
+    top: 50%;
+    left: 50%;
 }
 
 .rector-graph-content-animation {
