--- a/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
+++ b/Assets/Rector/StaticResources/UI/StyleSheets/RectorStyles.uss
@@ -182,8 +182,8 @@
 
 .rector-graph-content-animation {
     transition-property: translate;
-    transition-duration: 0.2s;
-    transition-timing-function: ease-in-out;
+    transition-duration: 0.1s;
+    transition-timing-function: linear;
 }
 
 .rector-node-root {
